--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "miniquery, a jQuery clone",
   "main": "lib/miniquery.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "nodemon app.js"
   },
   "repository": {
     "type": "git",
@@ -19,5 +20,11 @@
   "bugs": {
     "url": "https://github.com/hacktiv8/miniquery/issues"
   },
-  "homepage": "https://github.com/hacktiv8/miniquery#readme"
+  "homepage": "https://github.com/hacktiv8/miniquery#readme",
+  "directories": {
+    "lib": "lib"
+  },
+  "dependencies": {
+    "express": "^4.16.3"
+  }
 }
